...
            <View className="bg-background">
              {!isAuthenticated && <SyncBanner title={t('packs.syncBanner')} />}
              {isAuthenticated && (
                <View className="px-4">
                  <SegmentedControl
                    enabled={isAuthenticated}
                    values={['My Packs', 'All Packs']}
                    selectedIndex={selectedTypeIndex}
                    onIndexChange={(index) => {
                      setSelectedTypeIndex(index);
                    }}
                  />
                </View>
...
