...
            {(!packTemplate.isAppTemplate || user?.role === 'ADMIN') && (
              <Button
                className="flex-1"
                variant="secondary"
                onPress={() => addPackTemplateItemActionsRef.current?.present()}
              >
                <Text>Add Item</Text>
              </Button>
            )}
          </View>
        </View>

        {/* Tabs */}
        <View className="flex-row bg-background border-b border-border">
          <TouchableOpacity className={getTabStyle('all')} onPress={() => setActiveTab('all')}>
            <Text className={getTabTextStyle('all')}>All Items</Text>
          </TouchableOpacity>
          <TouchableOpacity className={getTabStyle('worn')} onPress={() => setActiveTab('worn')}>
            <Text className={getTabTextStyle('worn')}>Worn</Text>
          </TouchableOpacity>
          <TouchableOpacity
            className={getTabStyle('consumable')}
...
