...
                  </FormSection>
                )}

                {/* Pack Details Form - only show when creating new pack */}
                {!isAddingToExistingPack && (
                  <FormSection
                    ios={{ title: 'Pack Details' }}
                    footnote="Enter basic information for your new pack"
                  >
                    <form.Field name="packName">
                      {(field) => (
                        <FormItem>
                          <TextField
...
